  - Add "Offset" button for batch offsetting or scaling temperature values in Heatmap editor.
  - Add "Copy" button for duplicate heatmap preset in Heatmap editor.
  - Keep "Rename" dialog open after renaming for easy access in Vehicle brand editor.
  - Show close confirmation if changes were not saved.
  - Show deletion info and confirmation.

* Wheels Module
  - Add cornering radius calculation.
  - Add "cornering_radius_sampling_interval" option, which sets position sampling interval
    for cornering radius calculation.
    Value range in `5` to `100`. Default sampling interval is `10`, which is roughly 200ms
    interval between each recorded position. Higher value may result inaccuracy.
    Note, this option does not affect position recording interval.

* Cruise Widget
  - Add "show_distance_into_lap" option which shows distance into current lap.
  - Add "show_cornering_radius" option which shows real-time cornering radius.

* Misc
  - Updated contributors info, added new contributors:
    "Lee Bowden", "Jim Pearson", "Tanizo Yashima (yashiman)".

2.19.1 (2024-10-18)
-----------------------------
* Brake wear Widget
  - Separated "front_brake_failure_thickness, rear_brake_failure_thickness" options
    for front and rear brakes.
    Front brake failure thickness threshold can be different from rear brake.
  - Some reference brake failure thickness threshold:
    Hypercar and P2 classes in LMU usually have 25mm brake failure threshold.
    GTE class in LMU usually has 30mm brake failure threshold.

* Cruise Widget
  - Add "enable_track_clock_synchronization" option, which enables auto track clock
    and time scale synchronization. RestAPI module must be enabled to synchronize
    track clock from Rest API. This option is enabled by default.
    Disable this option to manually set and use "track_clock_time_scale" option for
    track clock display.

2.19.0 (2024-10-15)
-----------------------------
* RestAPI Module
  - Read "brake wear" data from LMU Rest API.