@@ -26,6 +26,7 @@ CFG_BOOL = (
     # Exact match
     "^active_state$|"
     "^auto_hide$|"
+    "^auto_hide_if_not_available$|"
     "^auto_hide_in_private_qualifying$|"
     "^fixed_position$|"
     "^minimize_to_tray$|"
@@ -65,9 +66,11 @@ CFG_STRING = (
     "^LMU$|"
     "^RF2$|"
     # Partial match
+    "file_name|"
     "info|"
     "list|"
     "prefix|"
+    "sound_format|"
     "suffix|"
     "text|"
     "unit"
@@ -110,9 +113,11 @@ CFG_INTEGER = (
     "icon_size|"
     "inner_gap|"
     "layout|"
+    "max_queue|"
     "number_of|"
     "samples|"
     "sampling_interval|"
+    "sound_volume|"
     "split_gap|"
     "update_interval|"
     "url_port|"
