@@ -61,6 +61,11 @@ MODULE_DEFAULT = {
         "update_interval": 10,
         "idle_update_interval": 400,
     },
+    "module_notes": {
+        "enable": True,
+        "update_interval": 10,
+        "idle_update_interval": 400,
+    },
     "module_relative": {
         "enable": True,
         "update_interval": 100,
